--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
     "@iconify/react": "^6.0.2",
     "framer-motion": "^12.23.22",
     "next": "15.5.4",
+    "nodemailer": "^7.0.10",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-toastify": "^11.0.5",
+    "resend": "^6.2.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/nodemailer": "^7.0.2",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
