--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
     "@iconify/react": "^6.0.2",
     "framer-motion": "^12.23.22",
+    "gsap": "^3.13.0",
     "next": "15.5.4",
     "nodemailer": "^7.0.10",
     "odometer": "^0.4.8",
